testimonials spacing fix

--- a/src/assets/styles/04-components/slider.scss
+++ b/src/assets/styles/04-components/slider.scss
@@ -129,7 +129,7 @@
     @apply shadow-default lg:shadow-none flex relative p-10 bg-white rounded-l-md transition-opacity opacity-60;
 
     &__inner{
-      @apply flex;
+      @apply flex items-center;
     }
 
     &__avatar{
